# track-occupancy

./: .dockerignore  .env.example  .gitignore  README.md  backup-rocrail-workspace.sh  config.yaml  deploy.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
cnn/: README.md  TEST-CNN.ipynb  TRAIN.ipynb  pyproject.toml
cnn/src/cnn/: __init__.py  utils.py
control/: .env.example  README.md  docker-compose.yml
control/dcc-ex-bridge/: Dockerfile  README.md  package.json  tsconfig.json
control/mqtt/: README.md  nanomq.conf
control/nginx/: README.md  default.conf
control/rocview-server/: Dockerfile  README.md
control/track-occupancy/: Dockerfile  README.md  package.json  tsconfig.json
control/traefik/: Dockerfile  README.md  dynamic_conf.yaml  traefik.yaml
dataset/: README.md  exclude.json  package.json
dataset/r49/: cars 11-17.r49  catalog-bg.r49  lighting.r49  simple.r49
dataset/src/: data_prep.ts  online_diagnostics.ts
doc/: INSTALL.md  TOOLING.md
lib/classifier/: package.json
lib/r49/: README.md  package.json
lib/uid/: README.md  package.json
ui/: PLAN.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: capture.ts  marker.ts  rr-app.ts  rr-editor-view.ts  rr-header.ts  rr-live-view.ts  rr-settings-dialog.ts  rr-stats-bar.ts  rr-thumbnail-bar.ts  rr-toolbar.ts  rr-viewer.ts
ui/tests/: marker.test.ts  rr-app.test.ts  rr-editor-view.test.ts  rr-header.test.ts  rr-live-view.test.ts  rr-stats-bar.test.ts  setup.ts  (+3 more)
webthrottle/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
(+21 files in other folders)
