[project]
name = "cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bernhard Boser", email = "bernhard.e.boser@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastai>=2.7.18",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxruntime>=1.25.1",
    "onnxscript>=0.7.0",
    "pandas>=2.2.3",
    "pillow>=12.2.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
